--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -129,7 +129,7 @@
 							input
 								margin: -1px 2px 0 0
 
-					.btn:last-child
+					.btn:last-child, 
 						border-top-right-radius: 4px
 						border-bottom-right-radius: 4px
 			
