--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -46,7 +46,7 @@
 			button
 				display: none
 
-			.close-all, .go-back
+			.close-stack, .go-back
 				float: right
 				padding: 0 15px
 				border: 0
@@ -82,6 +82,14 @@
 
 			&:hover img
 				margin: -10px 3px 0 0
+
+		&.last .close-stack
+			font-size: 12px
+
+			img
+				height: 9px
+				width: 9px
+				margin: -3px 5px 0 0
 
 		&:nth-last-child(2) header
 			background: #ff9c00
