--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -18,7 +18,7 @@
 		display: none!important
 
 	.oe-window // Style for tinymce
-		border: 1px solid #eee
+		border: 1px solid #ccc
 
 
 
@@ -90,6 +90,10 @@
 			color: #332100
 			text-shadow: 0 1px 0 rgba(255,255,255,0.5)
 
+		&.disabled, &[disabled]
+			background: #ff9c00
+			color: #332100
+
 	.btn-inverse
 		border: 1px solid #000
 
@@ -101,6 +105,27 @@
 		&.label-required
 			color: #777
 			background: #ccc
+
+	textarea:focus,
+	input[type="text"]:focus,
+	input[type="password"]:focus,
+	input[type="datetime"]:focus,
+	input[type="datetime-local"]:focus,
+	input[type="date"]:focus,
+	input[type="month"]:focus,
+	input[type="time"]:focus,
+	input[type="week"]:focus,
+	input[type="number"]:focus,
+	input[type="email"]:focus,
+	input[type="url"]:focus,
+	input[type="search"]:focus,
+	input[type="tel"]:focus,
+	input[type="color"]:focus,
+	.uneditable-input:focus
+		border-color: rgba(236, 173, 82, 0.8)
+		-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(236,173,82,.6)
+		-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(236,173,82,.6)
+		box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(236,173,82,.6)
 
 	// Size adjustments etc.
 	small
