--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -170,8 +170,8 @@
 
 				.close
 					position: absolute
-					top: 0
-					right: 0
+					top: 1px
+					right: 1px
 					padding: 2px 8px 8px 8px
 
 				&:hover .close
