--- a/css/eze.css
+++ b/css/eze.css
@@ -1496,6 +1496,8 @@
     font-size: 16px;
     margin: -6px 0 0 2px;
     color: white; }
+  .eze .eze-object-attributes .ezimage input {
+    float: left; }
   .eze .eze-object-attributes .eze-matrix table {
     margin: 0 0 10px 0; }
   .eze .eze-object-attributes .eze-matrix th {
