CSS for stack loder

--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -160,6 +160,10 @@
 				background: #222
 				color: #fff
 
+			.eze-loader
+				margin: 60px auto 0 auto
+				display: block
+
 		&.last .eze-stack-content
 			display: block
 
