--- a/css/eze.css
+++ b/css/eze.css
@@ -622,6 +622,9 @@
     .eze .stack-item .eze-stack-content.dark {
       background: #222222;
       color: white; }
+    .eze .stack-item .eze-stack-content .eze-loader {
+      margin: 60px auto 0 auto;
+      display: block; }
   .eze .stack-item.last .eze-stack-content {
     display: block; }
   .eze .stack-item.move-out .eze-stack-content {
