--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -240,6 +240,16 @@
 	.eze-dashboard-modal
 		width: 605px
 
+		.form-inline
+			input
+				width: 180px
+
+		.well
+			margin-top: 10px
+
+			input
+				width: 100px
+
 		h2
 			img
 				margin: -2px 5px 0 0
