--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -162,6 +162,8 @@
 
 				img
 					border-radius: 2px
+					min-height: 80px
+					min-width: 120px
 				
 				.edit-image
 					position: absolute
