--- a/css/eze.css
+++ b/css/eze.css
@@ -287,7 +287,8 @@
         font-size: 10px;
         text-decoration: none;
         position: relative;
-        cursor: pointer; }
+        cursor: pointer;
+        overflow: hidden; }
         .eze #eze-toolbar ul li a .title {
           width: 100%;
           display: block;
