--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -34,6 +34,7 @@
 					text-decoration: none
 					position: relative
 					cursor: pointer
+					overflow: hidden
 
 					.title
 						width: 100%
