Added 48px icon class

--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -144,6 +144,10 @@
 		height: 32px
 		width: 32px
 
+	.icon-48
+		height: 48px
+		width: 48px
+
 	select, .chzn-container
 		margin-bottom: 10px
 		height: 25px
