--- a/css/eze.css
+++ b/css/eze.css
@@ -1714,6 +1714,9 @@
   .eze .icon-32 {
     height: 32px;
     width: 32px; }
+  .eze .icon-48 {
+    height: 48px;
+    width: 48px; }
   .eze select, .eze .chzn-container {
     margin-bottom: 10px;
     height: 25px;
