--- a/css/sass/mixins.sass
+++ b/css/sass/mixins.sass
@@ -6,6 +6,7 @@
     background-image: -ms-linear-gradient(top, $top, $bottom)
     background-image: -o-linear-gradient(top, $top, $bottom)
     background-image: linear-gradient(top, $top, $bottom)
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$top',endColorstr='$bottom',GradientType=1)
 
 @mixin gradient-horizontal($left, $right)
     background-color: $left
