--- a/css/eze.css
+++ b/css/eze.css
@@ -573,6 +573,12 @@
     .eze .stack-item.last .close-stack img {
       height: 9px;
       width: 9px;
+      margin: -3px 5px 0 0;
+      -webkit-transition: color 0.2s ease-out;
+      -moz-transition: color 0.2s ease-out;
+      -o-transition: color 0.2s ease-out;
+      transition: color 0.2s ease-out; }
+    .eze .stack-item.last .close-stack:hover img {
       margin: -3px 5px 0 0; }
   .eze .stack-item:nth-last-child(2) header {
     background: #ff9c00;
