--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -91,6 +91,10 @@
 				height: 9px
 				width: 9px
 				margin: -3px 5px 0 0
+				@include transition(color, 0.2s)
+
+			&:hover img
+				margin: -3px 5px 0 0
 
 		&:nth-last-child(2) header
 			background: #ff9c00
