--- a/css/sass/finder.sass
+++ b/css/sass/finder.sass
@@ -21,6 +21,110 @@
 		float: left
 		overflow-x: auto
 		overflow-y: hidden
+
+		.column
+			float: left
+			border-right: 1px solid #d3d3d3
+			overflow-y: scroll
+			-webkit-overflow-scrolling: touch
+
+		li.node
+			background-image: none
+			display: block
+			cursor: pointer
+			//@include textselection
+			
+			a 
+				color: #000
+				display: block
+				height: 24px
+				min-width: 200px
+				max-width: 200px
+				font: normal 12px/12px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
+				padding: 0 10px 0 0
+				@include transition(all, 0.1s)
+				text-overflow: ellipsis
+				white-space: nowrap
+				overflow: hidden
+				border-top: 1px solid transparent
+				border-bottom: 1px solid #ebebeb
+				position: relative
+				margin-top: -1px
+				-webkit-transform: translate3d(0,0,0)
+
+				&:hover
+					background: #fafafa
+					border-color: #ccc
+
+				.has-children-arrow
+					background-color: #fafafa
+
+				span 
+					margin-left: 27px
+					line-height: 24px
+					
+				img 
+					position: absolute
+					left: 6px
+					top: 50%
+					bottom: 50%
+					margin-top: -8px
+					height: 16px
+					width: 16px
+
+				.has-children-arrow
+					display: block
+					height: 16px
+					width: 16px
+					position: absolute
+					right: 2px
+					top: 50%
+					bottom: 50%
+					margin-top: -8px
+					@include transition(all, 0.1s)
+					opacity: 0.7
+					background: transparent url("../images/legacy-sprite.png") -136px -22px no-repeat
+
+					@media only screen and (-webkit-min-device-pixel-ratio: 1.5)
+						background: transparent url("../images/legacy-sprite.png") -65px -55px no-repeat
+						-webkit-background-size: 300px 80px
+						background-size: 300px 80px
+
+			&.active a, &.active a:hover, &.dragover a
+				background: #ffa500
+				border-color: #ffa500
+				
+				.has-children-arrow
+					opacity: 1
+					background-color: #ffa500
+
+			&.hidden-object
+				opacity: 0.5
+				filter: alpha(opacity=50)
+			
+			&.dragged
+				z-index: 999
+
+			&.empty-node .has-children-arrow
+				opacity: 0.2
+				filter: alpha(opacity=50)
+
+			
+			&.clipboard a
+				color: rgba(0,0,0,0.3)
+
+				img
+					opacity: 0.3
+				
+			&.ui-draggable-dragging a
+				background: #ffc27f
+				opacity: 0.8
+				border-color: #ffc27f
+				//@include box-shadow(2px,2px,2px,0,rgba(0,0,0,0.5))
+				
+				.has-children-arrow
+					background-color: #ffc27f
+					opacity: 0.8
 				
 	.kp-finder-content 
 		clear: both
@@ -32,109 +136,9 @@
 			margin: 0
 			list-style: none
 		
-		.column
-			float: left
-			border-right: 1px solid #d3d3d3
-			overflow-y: scroll
-			-webkit-overflow-scrolling: touch
+		
 	
-			li
-				background-image: none
-				display: block
-				cursor: pointer
-				//@include textselection
-				
-				a 
-					color: #000
-					display: block
-					height: 24px
-					min-width: 200px
-					max-width: 200px
-					font: normal 12px/12px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
-					padding: 0 10px 0 0
-					@include transition(all, 0.1s)
-					text-overflow: ellipsis
-					white-space: nowrap
-					overflow: hidden
-					border-top: 1px solid transparent
-					border-bottom: 1px solid #ebebeb
-					position: relative
-					margin-top: -1px
-					-webkit-transform: translate3d(0,0,0)
-
-					&:hover
-						background: #fafafa
-						border-color: #ccc
-
-					.has-children-arrow
-						background-color: #fafafa
-
-					span 
-						margin-left: 27px
-						line-height: 24px
-						
-					img 
-						position: absolute
-						left: 6px
-						top: 50%
-						bottom: 50%
-						margin-top: -8px
-						height: 16px
-						width: 16px
-
-					.has-children-arrow
-						display: block
-						height: 16px
-						width: 16px
-						position: absolute
-						right: 2px
-						top: 50%
-						bottom: 50%
-						margin-top: -8px
-						@include transition(all, 0.1s)
-						opacity: 0.7
-						background: transparent url("../images/legacy-sprite.png") -136px -22px no-repeat
-
-						@media only screen and (-webkit-min-device-pixel-ratio: 1.5)
-							background: transparent url("../images/legacy-sprite.png") -65px -55px no-repeat
-							-webkit-background-size: 300px 80px
-							background-size: 300px 80px
-
-				&.active a, &.active a:hover, &.dragover a
-					background: #ffa500
-					border-color: #ffa500
-					
-					.has-children-arrow
-						opacity: 1
-						background-color: #ffa500
-
-				&.hidden-object
-					opacity: 0.5
-					filter: alpha(opacity=50)
-				
-				&.dragged
-					z-index: 999
-
-				&.empty-node .has-children-arrow
-					opacity: 0.2
-					filter: alpha(opacity=50)
-
-				
-				&.clipboard a
-					color: rgba(0,0,0,0.3)
-
-					img
-						opacity: 0.3
-					
-				&.ui-draggable-dragging a
-					background: #ffc27f
-					opacity: 0.8
-					border-color: #ffc27f
-					//@include box-shadow(2px,2px,2px,0,rgba(0,0,0,0.5))
-					
-					.has-children-arrow
-						background-color: #ffc27f
-						opacity: 0.8
+			
 	
 	
 	// Action column for selected item
