gradient fix for ie

--- a/css/sass/mixins.sass
+++ b/css/sass/mixins.sass
@@ -6,7 +6,8 @@
     background-image: -ms-linear-gradient(top, $top, $bottom)
     background-image: -o-linear-gradient(top, $top, $bottom)
     background-image: linear-gradient(top, $top, $bottom)
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$top',endColorstr='$bottom',GradientType=1)
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#{$top}, endColorstr=#{$bottom})
+
 
 @mixin gradient-horizontal($left, $right)
     background-color: $left
