--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -61,8 +61,8 @@
 					width: 9px
 
 		&.first .go-back
-			@include gradient(#ffe2b6, #ffc368)
 			background: none
+			filter: none
 
 		&.last .go-back
 			@include gradient(#ff9100, #ff5b00)
