--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -164,6 +164,10 @@
 					border-radius: 2px
 					min-height: 80px
 					min-width: 120px
+
+					&.icon-32
+						min-height: 0
+						min-width: 0
 				
 				.edit-image
 					position: absolute
