--- a/css/eze.css
+++ b/css/eze.css
@@ -2025,14 +2025,7 @@
     cursor: pointer;
     display: list-item; }
   .eze .chzn-container .chzn-results .highlighted {
-    background-color: #3875d7;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3875d7', endColorstr='#2a62bc', GradientType=0 );
-    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(20%, #3875d7), color-stop(90%, #2a62bc));
-    background-image: -webkit-linear-gradient(top, #3875d7 20%, #2a62bc 90%);
-    background-image: -moz-linear-gradient(top, #3875d7 20%, #2a62bc 90%);
-    background-image: -o-linear-gradient(top, #3875d7 20%, #2a62bc 90%);
-    background-image: -ms-linear-gradient(top, #3875d7 20%, #2a62bc 90%);
-    background-image: linear-gradient(top, #3875d7 20%, #2a62bc 90%);
+    background: #ff7d00;
     color: #fff; }
   .eze .chzn-container .chzn-results li em {
     background: #feffde;
@@ -2074,7 +2067,7 @@
     -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     -o-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-    border: 1px solid #5897fb; }
+    border: 1px solid #ff8d00; }
   .eze .chzn-container-active .chzn-single-with-drop {
     border: 1px solid #aaa;
     -webkit-box-shadow: 0 1px 0 #fff inset;
