--- a/css/sass/chosen.scss
+++ b/css/sass/chosen.scss
@@ -250,14 +250,7 @@
     display: list-item;
   }
   .chzn-container .chzn-results .highlighted {
-    background-color: #3875d7;
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3875d7', endColorstr='#2a62bc', GradientType=0 );  
-    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(20%, #3875d7), color-stop(90%, #2a62bc));
-    background-image: -webkit-linear-gradient(top, #3875d7 20%, #2a62bc 90%);
-    background-image: -moz-linear-gradient(top, #3875d7 20%, #2a62bc 90%);
-    background-image: -o-linear-gradient(top, #3875d7 20%, #2a62bc 90%);
-    background-image: -ms-linear-gradient(top, #3875d7 20%, #2a62bc 90%);
-    background-image: linear-gradient(top, #3875d7 20%, #2a62bc 90%);
+    background: #ff7d00;
     color: #fff;
   }
   .chzn-container .chzn-results li em {
@@ -313,7 +306,7 @@
     -moz-box-shadow   : 0 0 5px rgba(0,0,0,.3);
     -o-box-shadow     : 0 0 5px rgba(0,0,0,.3);
     box-shadow        : 0 0 5px rgba(0,0,0,.3);
-    border: 1px solid #5897fb;
+    border: 1px solid #ff8d00;
   }
   .chzn-container-active .chzn-single-with-drop {
     border: 1px solid #aaa;
