--- a/css/eze.css
+++ b/css/eze.css
@@ -494,7 +494,7 @@
   right: 44px;
   max-width: 1100px; }
   .eze .stack-item header {
-    background: #ffd5a1;
+    background: #ffac42;
     height: 30px;
     border-bottom: 1px solid #ffd6a1;
     position: fixed;
