--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -15,7 +15,7 @@
 		// Stack header
 
 		header
-			background: #ffd5a1
+			background: #FFAC42
 			height: 30px
 			border-bottom: 1px solid #ffd6a1
 			position: fixed
