--- a/css/eze.css
+++ b/css/eze.css
@@ -270,7 +270,8 @@
   background-image: -ms-linear-gradient(left, #1b1b1b 0%, #1e1e1e 100%);
   background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #1b1b1b), color-stop(1, #1e1e1e));
   background-image: linear-gradient(left, #1b1b1b 0%, #1e1e1e 100%);
-  box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.5), inset -1px 0 #3c3c3c; }
+  box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.5), inset -1px 0 #3c3c3c;
+  -webkit-transform: translateZ(0); }
   .eze #eze-toolbar ul {
     margin: 0;
     list-style: none;
@@ -849,7 +850,8 @@
     background: black; }
     .eze .kp-edit-block-box.active ul {
       width: auto !important;
-      height: auto !important; }
+      height: auto !important;
+      -webkit-transform: translateZ(0); }
       .eze .kp-edit-block-box.active ul li {
         display: block !important;
         opacity: 1 !important;
