--- a/css/sass/pencils.sass
+++ b/css/sass/pencils.sass
@@ -31,6 +31,7 @@
 		ul
 			width: auto!important
 			height: auto!important
+			-webkit-transform: translateZ(0)
 
 			li
 				display: block!important
