--- a/css/eze.css
+++ b/css/eze.css
@@ -913,6 +913,7 @@
           box-shadow: inset 0 1px 0 0 #676767 !important; }
 
 .attribute-direct-edit {
+  border: 1px solid #555555 !important;
   border: 1px solid white !important;
   background-color: white;
   background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#ededed));
@@ -1733,13 +1734,16 @@
       text-decoration: none; }
   .eze .icon-16 {
     height: 16px;
-    width: 16px; }
+    width: 16px;
+    max-width: 16px; }
   .eze .icon-32 {
     height: 32px;
-    width: 32px; }
+    width: 32px;
+    max-width: 32px; }
   .eze .icon-48 {
     height: 48px;
-    width: 48px; }
+    width: 48px;
+    max-width: 48px; }
   .eze select, .eze .chzn-container {
     margin-bottom: 10px;
     height: 25px;
