--- a/css/sass/pencils.sass
+++ b/css/sass/pencils.sass
@@ -93,7 +93,8 @@
 					box-shadow: inset 0 1px 0 0 #676767!important
 
 .attribute-direct-edit
-	border: 1px solid #fff!important
+	border: 1px solid rgb(85,85,85)!important
+	border: 1px solid rgba(255,255,255,1)!important
 	@include gradient(#ffffff,#ededed)
 	@include box-shadow-both(0,0,5px,#000,0,1px,0,rgba(255,255,255,0.2),inset)
 	@include transition(opacity,0.2s)
