--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -142,14 +142,17 @@
 	.icon-16
 		height: 16px
 		width: 16px
+		max-width: 16px
 
 	.icon-32
 		height: 32px
 		width: 32px
+		max-width: 32px
 
 	.icon-48
 		height: 48px
 		width: 48px
+		max-width: 48px
 
 	select, .chzn-container
 		margin-bottom: 10px
