--- a/css/eze.css
+++ b/css/eze.css
@@ -333,6 +333,11 @@
         .eze #eze-toolbar ul li .quick-action.search .btn {
           margin: 0 0 0 10px;
           border: 1px solid white; }
+  .eze #eze-toolbar img {
+    max-height: 35px;
+    max-width: 35px;
+    border-radius: 35px;
+    margin: 0 auto; }
   .eze #eze-toolbar b {
     background: url(../images/sprite.png);
     display: block;
@@ -745,7 +750,7 @@
         filter: alpha(opacity=50); }
       .eze .finder .kp-columns-wrapper li.node.dragged {
         z-index: 999; }
-      .eze .finder .kp-columns-wrapper li.node.empty-node .has-children-arrow {
+      .eze .finder .kp-columns-wrapper li.node.empty-node .has-children-arrow, .eze .finder .kp-columns-wrapper li.node.empty-node.active .has-children-arrow {
         opacity: 0.2;
         filter: alpha(opacity=50); }
       .eze .finder .kp-columns-wrapper li.node.clipboard a {
@@ -1506,7 +1511,7 @@
     position: relative; }
     .eze .eze-object-attributes .ezimage .add-tag .btn, .eze .eze-object-attributes .keymedia .add-tag .btn {
       position: absolute;
-      right: -2px;
+      right: 0;
       margin: 0;
       z-index: 2; }
     .eze .eze-object-attributes .ezimage .add-tag input, .eze .eze-object-attributes .keymedia .add-tag input {
