--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -91,6 +91,11 @@
 
 		// Using the b element for toolbar icons, yo
 
+		img
+			max-height: 35px
+			max-width: 35px
+			border-radius: 35px
+			margin: 0 auto
 
 		b
 			background: url(../images/sprite.png)
