Fix for long names in create content

--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -173,6 +173,9 @@
 			font: normal 12px/26px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
 			border-radius: 4px
 			padding: 0 15px 0 5px
+			overflow: hidden
+			text-overflow: ellipsis
+			white-space: nowrap
 
 			img
 				margin: -4px 4px 0 0
