--- a/css/sass/eze.sass
+++ b/css/sass/eze.sass
@@ -50,7 +50,7 @@ body
 // Libs
 
 #ezieMainContainer, .ui-widget
-	z-index: 80000!important
+	z-index: 8000000!important
 
 .eze
 	text-rendering: optimizeLegibility
