--- a/css/sass/mediabase.sass
+++ b/css/sass/mediabase.sass
@@ -14,7 +14,7 @@
 	bottom: 0
 	background: rgb(20,20,20)
 	background: rgba(0,0,0,0.8)
-	z-index: 60000
+	z-index: 6000000
 	color: #fff
 	padding: 20px 0 0 20px
 	overflow-y: scroll
