--- a/css/sass/modals.sass
+++ b/css/sass/modals.sass
@@ -7,7 +7,7 @@
 		right: 0
 		left: 64px
 		background: rgba(0,0,0,0.2)
-		z-index: 50000
+		z-index: 5000000
 		overflow: hidden
 
 		.eze-modal-content
