--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -8,7 +8,7 @@
 		left: 0
 		width: 63px
 		border-right: 1px solid #000
-		z-index: 70000
+		z-index: 7000000
 		@include gradient-horizontal(#1b1b1b, #1e1e1e)
 		box-shadow: 0 0 3px 2px rgba(0,0,0,0.5), inset -1px 0 #3c3c3c
 		-webkit-transform: translateZ(0)
