--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -13,6 +13,8 @@
         .eze-table-actions
             height: 35px
             margin-right: 220px
+            @media screen and (max-width: 1070px)
+                margin-right: 0
 
             .batch .btn
                 float: left
@@ -26,14 +28,24 @@
                 float: right
                 position: relative
                 z-index: 1
+                @media screen and (max-width: 1070px)
+                    float: left
+                    clear: both
+                    margin-top: -5px
 
                 .sort-by, .show-content-toggle
                     float: right
+                    margin-bottom: 5px
+                    @media screen and (max-width: 1070px)
+                        clear: none
+                    @media screen and (max-width: 825px)
+                        float: left
+                        clear: both
 
                 h2
                     float: left
                     font: bold 12px/12px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
-                    margin: 8px 10px 0 0
+                    margin: 8px 10px 0 10px
                     display: inline
                     color: #555
 
@@ -49,7 +61,7 @@
                         opacity: 1
 
             .show-content-toggle
-                margin-right: 10px
+                margin-right: 0
 
         .eze-table-content
             position: absolute
@@ -63,6 +75,10 @@
             border: 1px solid #e4e3e3
             -webkit-overflow-scrolling: touch
             -webkit-transform: translateZ(0)
+            @media screen and (max-width: 1070px)
+                top: 111px
+            @media screen and (max-width: 825px)
+                top: 143px
 
             .loading-wrap
                 position: absolute
@@ -159,6 +175,7 @@
                             margin: 15px 0 3px 0
                             display: inline-block
                             width: 65%
+                            overflow: hidden
 
                             a
                                 border-bottom: 1px solid #e07a00
