--- a/css/sass/finder.sass
+++ b/css/sass/finder.sass
@@ -16,6 +16,12 @@
 		p
 			margin: 0
 			font: normal 11px/18px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
+
+	.error
+		background: #ec0d0d
+		text-align: center
+		color: #fff
+		padding: 5px 0
 	
 	.kp-columns-wrapper
 		float: left
