--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -20,7 +20,11 @@
 	.oe-window // Style for tinymce
 		border: 1px solid #ccc
 
-
+		textarea.box
+			width: 100%
+			padding: 0
+			border: 0
+			font-family: monospace
 
 	// Bootstrap-style
 
